# dhall-rust

./: Cargo.toml  README.md
dhall/: Cargo.toml
dhall/src/: builtins.rs  ctxt.rs  lib.rs  utils.rs
dhall/src/error/: builder.rs  mod.rs
dhall/src/operations/: kind.rs  normalization.rs  typecheck.rs
dhall/src/semantics/: parse.rs
dhall/src/semantics/nze/: env.rs  lazy.rs  nir.rs  normalize.rs  var.rs
dhall/src/semantics/resolve/: cache.rs  env.rs  hir.rs  mod.rs  resolve.rs
dhall/src/semantics/tck/: tir.rs  typecheck.rs
dhall/src/syntax/: mod.rs
dhall/src/syntax/ast/: expr.rs  import.rs  label.rs  span.rs  text.rs  visitor.rs
dhall/src/syntax/binary/: decode.rs  encode.rs
dhall/src/syntax/text/: mod.rs  nom_parser.rs  printer.rs
dhall/src/syntax/text/nom_parser/: README.md  application.rs  errors.rs  expression.rs  helpers.rs  imports.rs  input.rs  labels.rs  literals.rs  mod.rs  operators.rs  structure.rs  tests.rs
dhall/tests/: spec.rs
dhall/tests/import/failure/unit/: HashMismatch2.txt
dhall/tests/parser/failure/: ImportHeadersExteriorHash.txt  ProjectionByTypeNeedsParens.txt  annotation.txt  assertBinding.txt  boundBuiltins.txt  builtinWithIndex.txt  doubleBoundsNeg.txt  doubleBoundsPos.txt  fSomeX.txt  importAccess.txt  incompleteIf.txt  mandatoryNewline.txt  nonBase16Hash.txt  nonCharacter.txt  nonCharacterUnbraced.txt  surrogatePairUnbraced.txt
dhall/tests/parser/failure/spacing/: AnnotationNoSpace.txt  ApplicationNoSpace1.txt  ApplicationNoSpace2.txt  AssertNoSpace.txt  ForallNoSpace.txt  HeadersNoSpace.txt  IfNoSpace1.txt  IfNoSpace2.txt  IfNoSpace3.txt  ImportAltNoSpace.txt  ImportHashedNoSpace.txt  LambdaNoSpace.txt  LetAnnotNoSpace.txt  LetNoSpace1.txt  LetNoSpace2.txt  ListLitEmptyNoSpace.txt  MergeAnnotationNoSpace3.txt  MergeNoSpace1.txt  MergeNoSpace2.txt  NaturalPlusNoSpace.txt  RecordTypeNoSpace.txt  SomeNoSpace.txt  ToMapAnnotNoSpace.txt  ToMapNoSpace.txt  UnionTypeNoSpace.txt
dhall/tests/parser/failure/unit/: AssertNoAnnotation.txt  BoolLitTrueWithIndex.txt  BuiltinBoolWithIndex.txt  BuiltinTypeWithIndex.txt  ImportEnvWrongEscape.txt  ListLitEmptyAnnotation.txt  ListLitEmptyMissingAnnotation.txt  ListLitTwoCommas.txt  MergeAlone.txt  MergeOneArgument.txt  NaturalLitLeadingZero.txt  OldUnionLitSyntax.txt  ProjectionTwoCommas.txt  RecordFieldMustNotBeKeyword00.txt  RecordFieldMustNotBeKeyword01.txt  RecordFieldMustNotBeKeyword02.txt  RecordFieldMustNotBeKeyword03.txt  RecordFieldMustNotBeKeyword04.txt  RecordFieldMustNotBeKeyword05.txt  RecordFieldMustNotBeKeyword06.txt  RecordFieldMustNotBeKeyword07.txt  RecordFieldMustNotBeKeyword08.txt  RecordFieldMustNotBeKeyword09.txt  RecordFieldMustNotBeKeyword10.txt  RecordFieldMustNotBeKeyword11.txt  RecordFieldMustNotBeKeyword12.txt  RecordFieldMustNotBeKeyword13.txt  RecordFieldMustNotBeKeyword14.txt  RecordLitPunDotted.txt  RecordTwoCommas.txt  SomeAlone.txt  UnionTypeTwoDelims.txt  UrlWithQuotedPath.txt  UsingToMap.txt  WithPrecedence1.txt  WithPrecedence2.txt  WithPrecedence3.txt  WithWhitespace.txt
dhall/tests/parser/success/text/: multilineBlankLineCrlfB.txt  multilineCorruptedLeadingWhitespaceB.txt  multilineMismatchedLeadingWhitespaceB.txt
dhall/tests/type-inference/failure/: hurkensParadox.txt  recordOfKind.txt
dhall/tests/type-inference/failure/unit/: AnnotationRecordWrongFieldName.txt  AnnotationRecordWrongFieldType.txt  AssertAlphaTrap.txt  AssertAlphaTrap2.txt  AssertNotEquivalence.txt  CompletionMissingRequiredField.txt  CompletionWithWrongDefaultType.txt  CompletionWithWrongFieldName.txt  EmptyToMap.txt  EquivalenceNotSameType.txt  EquivalenceNotTerms.txt  FunctionApplicationArgumentNotMatch.txt  FunctionApplicationIsNotFunction.txt  FunctionArgumentTypeNotAType.txt  FunctionTypeArgumentTypeNotAType.txt  HeterogenousToMap.txt  IfBranchesNotMatch.txt  IfBranchesNotTermTypeOrKind.txt  IfNotBool.txt  LetWithNonterminatingAnnotation.txt  LetWithWrongAnnotation.txt  ListLiteralEmptyNotType.txt  ListLiteralNotType.txt  ListLiteralTypesNotMatch.txt  MergeAlternativeHasNoHandler.txt  MergeAnnotationMismatch.txt  MergeBool.txt  MergeEmptyNeedsDirectAnnotation1.txt  MergeHandlerNotFunction.txt  MergeHandlerNotMatchAlternativeType.txt  MergeHandlersWithDifferentType.txt  MergeLhsNotRecord.txt  MergeUnusedHandler.txt  (+30 more)
dhall_engine/: Cargo.toml
dhall_engine/src/: conv.rs  fetcher.rs  lib.rs  parse.rs  resolve.rs
dhall_engine/tests/: lazy_eval.rs  resolve_test.rs  smoke.rs
examples/: Cargo.toml  custom_builtin_derivation.rs  derivation_system.rs  dhall_derivation_integration.rs  example.dhall  schema.dhall
(+4 files in other folders)
