[package]
name = "dhall"
# remember to update html_root_url
version = "0.13.0"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Implementation of the Dhall configuration language"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
edition = "2018"
include = ["src/**/*", "README.md"]

[features]
default = [ "reqwest" ]

[[test]]
name = "spec"
harness = false
path = "tests/spec.rs"

[dependencies]
annotate-snippets = "0.9.0"
half = "2.1.0"
hex = "0.4.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
minicbor = { version = "0.18.0", features = ["alloc", "half"] }
once_cell = "1.3.1"
percent-encoding = "2.1.0"
sha2 = "0.10.2"
nom = "7"

# Reqwest needs proper async support to work on wasm. So no remote imports on
# wasm for now.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking"], optional = true }
home = "0.5.3"
url = "2.1"

[dev-dependencies]
anyhow = "1.0.28"
colored-diff = "0.2.2"
fs_extra = "1.2.0"
libtest-mimic = "0.5.0"
rand = "0.8"
version-sync = "0.9"
walkdir = "2"

