[package]
name = "dhall"
# remember to update html_root_url
version = "0.13.0"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Implementation of the Dhall configuration language"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
edition = "2018"
include = ["src/**/*", "README.md"]

[features]
default = [ "std" ]
std = [ "annotate-snippets", "itertools/use_std" ]

[[test]]
name = "spec"
harness = false
path = "tests/spec.rs"

[dependencies]
annotate-snippets = { version = "0.9.0", optional = true }
half = "2.1.0"
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
hashbrown = "0.14"
itertools = { version = "0.10.3", default-features = false, features = ["use_alloc"] }
minicbor = { version = "0.18.0", features = ["alloc", "half"] }
percent-encoding = "2.1.0"
sha2 = { version = "0.10.2", default-features = false }
nom = { version = "7", default-features = false, features = ["alloc"] }

# Reqwest needs proper async support to work on wasm. So no remote imports on
# wasm for now.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking"], optional = true }
home = "0.5.3"
url = "2.1"

[dev-dependencies]
anyhow = "1.0.28"
colored-diff = "0.2.2"
dhall_engine = { path = "../dhall_engine" }
fs_extra = "1.2.0"
libtest-mimic = "0.5.0"
rand = "0.8"
version-sync = "0.9"
walkdir = "2"

