[package]
name = "dhall-derivation-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "derivation_system"
path = "derivation_system.rs"

[[example]]
name = "dhall_integration"
path = "dhall_derivation_integration.rs"

[dependencies]
serde_dhall = { path = "../serde_dhall" }
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
hex = "0.4"
